--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&display=swap"
       rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital@1&display=swap"
+      rel="stylesheet"
     />
 
     <!-- Feather Icon -->
@@ -41,25 +43,23 @@
     <!-- Navbar End -->
 
     <!-- Hero Section -->
-    
+
     <section class="hero" id="Beranda">
       <main class="konten">
         <h1>Sudah Pada Ngops <span>Belum ?</span></h1>
         <p>Ngopilah sebelum Ngopi itu dilarang.</p>
-        <a href="#" class="cta">Minum Cepet</a>
-
+        <a href="#" class="cta">PESAN DISINI</a>
       </main>
     </section>
-
     <!-- Hero Section end -->
 
     <!--Feather Icon  -->
-
     <script>
       feather.replace();
     </script>
+    <!-- Feather Icon -->
 
     <!-- JS -->
-    <script src="js/script.js"></script>
+    <script src="css/js/script.js"></script>
   </body>
 </html>
